--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -24,6 +24,8 @@
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
 		<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="../bower_components/angular-facebook/lib/angular-facebook.js"></script>
+		<script src="../bower_components/angular-resource/angular-resource.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/services.js"></script>
 		<script src="js/controllers.js"></script>
