--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -27,7 +27,14 @@
 		<script src="../bower_components/angular-facebook/lib/angular-facebook.js"></script>
 		<script src="../bower_components/angular-resource/angular-resource.js"></script>
 		<script src="js/app.js"></script>
-		<script src="js/services.js"></script>
+		
+		<!-- Load all Services -->
+		<script src="js/services/configService.js"></script>
+		<script src="js/services/facebookService.js"></script>
+		<script src="js/services/authenticationService.js"></script>
+		<script src="js/services/profilesService.js"></script>
+		
+		
 		<script src="js/controllers.js"></script>
 		<script src="js/filters.js"></script>
 		<script src="js/directives.js"></script>
