--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -20,22 +20,28 @@
 		<!-- In production use:
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 		-->
+		
+		<!-- Load dependencies -->
 		<script src="../bower_components/jquery/dist/jquery.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
 		<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="../bower_components/angular-facebook/lib/angular-facebook.js"></script>
 		<script src="../bower_components/angular-resource/angular-resource.js"></script>
+		
+		<!-- Load yieldto.me App -->
 		<script src="js/app.js"></script>
 		
 		<!-- Load all Services -->
 		<script src="js/services/configService.js"></script>
 		<script src="js/services/facebookService.js"></script>
 		<script src="js/services/authenticationService.js"></script>
-		<script src="js/services/profilesService.js"></script>
+		<script src="js/services/profileService.js"></script>
 		
+		<!-- Load all Controllers -->
+		<script src="js/controllers/homeController.js"></script>
+		<script src="js/controllers/createProfileController.js"></script>
 		
-		<script src="js/controllers.js"></script>
 		<script src="js/filters.js"></script>
 		<script src="js/directives.js"></script>
 	</body>
