--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -20,8 +20,8 @@
         </footer>
     </div>
     <!-- In production use:
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-		-->
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+        -->
 
     <!-- Load dependencies -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -45,6 +45,7 @@
     <!-- Load all Controllers -->
     <script src="js/controllers/homeController.js"></script>
     <script src="js/controllers/createProfileController.js"></script>
+    <script src="js/controllers/editProfileController.js"></script>
     <script src="js/controllers/eventsController.js"></script>
 
     <script src="js/filters.js"></script>
