--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -46,7 +46,10 @@
     <script src="js/controllers/homeController.js"></script>
     <script src="js/controllers/createProfileController.js"></script>
     <script src="js/controllers/editProfileController.js"></script>
+    <script src="js/controllers/viewProfileController.js"></script>
     <script src="js/controllers/eventsController.js"></script>
+    <script src="js/controllers/createEventController.js"></script>
+    <script src="js/controllers/attendController.js"></script>
 
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
