--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -15,7 +15,7 @@
         <hr />
         <footer>
             <p>
-                Copyright &copy; 2014 - Debate Systems Limited
+                Copyright &copy; 2014 - Debate Systems Ltd
             </p>
         </footer>
     </div>
@@ -36,6 +36,7 @@
 
     <!-- Load all Services -->
     <script src="js/services/configService.js"></script>
+    <script src="js/services/sessionService.js"></script>
     <script src="js/services/facebookService.js"></script>
     <script src="js/services/authenticationService.js"></script>
     <script src="js/services/profileService.js"></script>
@@ -49,7 +50,9 @@
     <script src="js/controllers/viewProfileController.js"></script>
     <script src="js/controllers/eventsController.js"></script>
     <script src="js/controllers/createEventController.js"></script>
+    <script src="js/controllers/editEventController.js"></script>
     <script src="js/controllers/attendController.js"></script>
+    <script src="js/controllers/landingController.js"></script>
 
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
