Added Speakers lists

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -25,12 +25,16 @@
 
     <!-- Load dependencies -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/jquery-ui/ui/jquery-ui.js"></script>
+    <script src="../bower_components/jquery-ui-touch-punch/jquery.ui.touch-punch.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-resource/angular-resource.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
+    <script src="../bower_components/angular-touch/angular-touch.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="../bower_components/angular-facebook/lib/angular-facebook.js"></script>
-    <script src="../bower_components/angular-resource/angular-resource.js"></script>
 
     <!-- Load yieldto.me App -->
     <script src="js/app.js"></script>
