--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -7,6 +7,7 @@
     <title>yieldto.me</title>
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bower_components/angular-loading-bar/build/loading-bar.css" />
 </head>
 
 <body>
@@ -34,6 +35,7 @@
     <script src="../bower_components/angular-facebook/lib/angular-facebook.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="../bower_components/angular-loading-bar/build/loading-bar.js"></script>
 
     <!-- Load yieldto.me App -->
     <script src="js/app.js"></script>
