Refactored to split out SpeakersService from SpeakersListService

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -49,6 +49,7 @@
     <script src="js/services/eventService.js"></script>
     <script src="js/services/attendeeService.js"></script>
     <script src="js/services/speakersListService.js"></script>
+    <script src="js/services/speakersService.js"></script>
 
     <!-- Load all Controllers -->
     <script src="js/controllers/homeController.js"></script>
