--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -20,9 +20,6 @@
             </p>
         </footer>
     </div>
-    <!-- In production use:
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-        -->
 
     <!-- Load dependencies -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -50,6 +47,7 @@
     <script src="js/services/attendeeService.js"></script>
     <script src="js/services/speakersListService.js"></script>
     <script src="js/services/speakersService.js"></script>
+    <script src="js/services/pollService.js"></script>
 
     <!-- Load all Controllers -->
     <script src="js/controllers/homeController.js"></script>
@@ -66,10 +64,15 @@
     <script src="js/controllers/profile/editProfileController.js"></script>
     <script src="js/controllers/profile/viewProfileController.js"></script>
     
-    <!-- Load SpeakersLIst Controllers -->
+    <!-- Load SpeakersList Controllers -->
     <script src="js/controllers/speakersList/speakersListsController.js"></script>
     <script src="js/controllers/speakersList/createSpeakersListController.js"></script>
     <script src="js/controllers/speakersList/speakersController.js"></script>
+
+    <!-- Load Poll Controllers -->
+    <script src="js/controllers/poll/pollsController.js"></script>
+    <script src="js/controllers/poll/createPollController.js"></script>
+    <script src="js/controllers/poll/editPollController.js"></script>
 
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
