Replaced angular-facebook when ngFacebook

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -29,7 +29,7 @@
     <script src="../bower_components/angular-resource/angular-resource.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-touch/angular-touch.js"></script>
-    <script src="../bower_components/angular-facebook/lib/angular-facebook.js"></script>
+    <script src="../bower_components/ng-facebook/ngFacebook.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="../bower_components/angular-loading-bar/build/loading-bar.js"></script>
@@ -48,6 +48,7 @@
     <script src="js/services/speakersListService.js"></script>
     <script src="js/services/speakersService.js"></script>
     <script src="js/services/pollService.js"></script>
+    <script src="js/services/votesService.js"></script>
 
     <!-- Load all Controllers -->
     <script src="js/controllers/homeController.js"></script>
@@ -73,6 +74,7 @@
     <script src="js/controllers/poll/pollsController.js"></script>
     <script src="js/controllers/poll/createPollController.js"></script>
     <script src="js/controllers/poll/editPollController.js"></script>
+    <script src="js/controllers/poll/votesController.js"></script>
 
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
