--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -68,6 +68,7 @@
     <!-- Load SpeakersList Controllers -->
     <script src="js/controllers/speakersList/speakersListsController.js"></script>
     <script src="js/controllers/speakersList/createSpeakersListController.js"></script>
+    <script src="js/controllers/speakersList/editSpeakersListController.js"></script>
     <script src="js/controllers/speakersList/speakersController.js"></script>
 
     <!-- Load Poll Controllers -->
