--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/angular-loading-bar/build/loading-bar.css" />
+    <link rel="stylesheet" href="../bower_components/angular-growl/build/angular-growl.min.css" />
 </head>
 
 <body>
@@ -20,6 +21,8 @@
             </p>
         </footer>
     </div>
+    <div growl></div>
+    <div id="fb-root"></div>
 
     <!-- Load dependencies -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -33,6 +36,8 @@
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="../bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="../bower_components/angular-animate/angular-animate.js"></script>
+    <script src="../bower_components/angular-growl/build/angular-growl.js"></script>
 
     <!-- Load yieldto.me App -->
     <script src="js/app.js"></script>
