Added Add another speaker function

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -75,6 +75,7 @@
     <script src="js/controllers/speakersList/createSpeakersListController.js"></script>
     <script src="js/controllers/speakersList/editSpeakersListController.js"></script>
     <script src="js/controllers/speakersList/speakersController.js"></script>
+    <script src="js/controllers/speakersList/addSpeakerController.js"></script>
 
     <!-- Load Poll Controllers -->
     <script src="js/controllers/poll/pollsController.js"></script>
