Added edit Attendee capabilities

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -62,14 +62,17 @@
     <script src="js/controllers/event/eventsController.js"></script>
     <script src="js/controllers/event/createEventController.js"></script>
     <script src="js/controllers/event/editEventController.js"></script>
-    <script src="js/controllers/event/attendController.js"></script>
-    <script src="js/controllers/event/landingController.js"></script>
 
     <!-- Load Profile Controllers -->
     <script src="js/controllers/profile/createProfileController.js"></script>
     <script src="js/controllers/profile/editProfileController.js"></script>
     <script src="js/controllers/profile/viewProfileController.js"></script>
     
+    <!-- Load Attendee Controllers -->
+    <script src="js/controllers/attendee/createAttendeeController.js"></script>
+    <script src="js/controllers/attendee/attendeesController.js"></script>
+    <script src="js/controllers/attendee/editAttendeeController.js"></script>
+
     <!-- Load SpeakersList Controllers -->
     <script src="js/controllers/speakersList/speakersListsController.js"></script>
     <script src="js/controllers/speakersList/createSpeakersListController.js"></script>
