Allows an Event creator to Add attendees (without profiles)
Resolves #6 and Resolves #4

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -70,6 +70,7 @@
     
     <!-- Load Attendee Controllers -->
     <script src="js/controllers/attendee/createAttendeeController.js"></script>
+    <script src="js/controllers/attendee/createOtherAttendeeController.js"></script>
     <script src="js/controllers/attendee/attendeesController.js"></script>
     <script src="js/controllers/attendee/editAttendeeController.js"></script>
 
