Updated the landing page

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yieldto.me</title>
+    <title>yieldto.me - Helps with the boring details of Model UN debate</title>
+    <meta name="description" content="Helps delegates and organisers with the boring details of Model UNs from their phone, tablet, or computer. Everyone spends less time on the rules and more time on the debate">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/angular-loading-bar/build/loading-bar.css" />
@@ -17,7 +18,15 @@
         <hr />
         <footer>
             <p>
-                Copyright &copy; 2014 - Debate Systems Ltd
+                <a href="http://www.facebook.com/yieldtodotme" target="_blank" style="margin-left:5px; color:grey">
+                    <span style="margin-left:5px;" class="glyphicon glyphicon-user"></span> like</a>
+                <a href="http://www.twitter.com/yieldto_me" target="_blank" style="margin-left:5px; color:grey">
+                    <span style="margin-left:5px" class="glyphicon glyphicon-comment"></span> tweet</a>
+                <a href="https://yieldtome.uservoice.com" target="_blank" style="margin-left:5px; color:grey">
+                    <span style="margin-left:5px" class="glyphicon glyphicon-bullhorn"></span> suggest</a>
+                <a href="http://www.github.com/bradleyscott/yieldtome" target="_blank" style="margin-left:5px; color:grey">
+                    <span style="margin-left:5px" class="glyphicon glyphicon-transfer"></span> code</a>
+                <span class="pull-right hidden-xs">Copyright &copy; 2014 - Debate Systems Ltd</span>
             </p>
         </footer>
     </div>
@@ -67,7 +76,7 @@
     <script src="js/controllers/profile/createProfileController.js"></script>
     <script src="js/controllers/profile/editProfileController.js"></script>
     <script src="js/controllers/profile/viewProfileController.js"></script>
-    
+
     <!-- Load Attendee Controllers -->
     <script src="js/controllers/attendee/createAttendeeController.js"></script>
     <script src="js/controllers/attendee/createOtherAttendeeController.js"></script>
