Implemented Like delegate UI

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -64,6 +64,7 @@
     <script src="js/services/speakersService.js"></script>
     <script src="js/services/pollService.js"></script>
     <script src="js/services/votesService.js"></script>
+    <script src="js/services/likeService.js"></script>
 
     <!-- Load all Controllers -->
     <script src="js/controllers/homeController.js"></script>
