--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -54,6 +54,7 @@
     <script src="../bower_components/angulartics/dist/angulartics-ga.min.js"></script>
     <script src="../bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="../bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
+    <script src="../bower_components/underscore/underscore-min.js"></script>
 
     <!-- Load yieldto.me App -->
     <script src="js/app.js"></script>
