--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div ng-view></div>
-    <div class="container body-content">
+    <div class="container body-content" id="footer">
         <hr />
         <footer>
             <p>
@@ -50,11 +50,19 @@
     <script src="../bower_components/angular-loading-bar/build/loading-bar.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <script src="../bower_components/angular-growl/build/angular-growl.js"></script>
+    <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
     <script src="../bower_components/angulartics/dist/angulartics-ga.min.js"></script>
     <script src="../bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="../bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
     <script src="../bower_components/underscore/underscore-min.js"></script>
+    <script src="../bower_components/angularjs-scroll-glue/src/scrollglue.js"></script>
+    <script src="../bower_components/moment/moment.js"></script>
+    <script src="../bower_components/angular-moment/angular-moment.js"></script>
+
+    <!-- Load WebSocket libraries and config -->
+    <script src="http://localhost:1337/js/dependencies/sails.io.js"></script>
+    <script type="text/javascript">io.sails.url ='http://localhost:1337';</script>
 
     <!-- Load yieldto.me App -->
     <script src="js/app.js"></script>
@@ -71,6 +79,7 @@
     <script src="js/services/pollService.js"></script>
     <script src="js/services/votesService.js"></script>
     <script src="js/services/likeService.js"></script>
+    <script src="js/services/chatService.js"></script>
 
     <!-- Load all Controllers -->
     <script src="js/controllers/homeController.js"></script>
@@ -103,6 +112,9 @@
     <script src="js/controllers/poll/createPollController.js"></script>
     <script src="js/controllers/poll/editPollController.js"></script>
     <script src="js/controllers/poll/votesController.js"></script>
+
+    <!-- Chat Controllers -->
+    <script src="js/controllers/chat/directMessageController.js"></script>
 
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
