Added native HTML5 popup notifications for Chrome

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -58,6 +58,7 @@
     <script src="../bower_components/underscore/underscore-min.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/angular-moment/angular-moment.js"></script>
+    <script src="../bower_components/angular-notification/angular-notification.js"></script>
 
     <!-- Load WebSocket libraries and config -->
     <script src="../bower_components/socket.io-client/socket.io.js"></script>
