Removed Google analytics js from dev build

--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -128,7 +128,8 @@
     </script>
 
     <!-- Analytics tracking -->
-    <script>
+    <!-- Removed in development environment -->
+<!--     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -143,7 +144,7 @@
 
     ga('create', 'UA-40823396-1', 'auto');
     </script>
-
+ -->
 </body>
 
 </html>
