--- a/client/template.html
+++ b/client/template.html
@@ -1,4 +1,4 @@
-<template name="yieldtome-template">
+<template name="yieldtome_template">
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
@@ -19,9 +19,12 @@
     <!-- Initialise Materialize -->
     <script type="text/javascript" charset="utf-8" async defer>
     $(document).ready(function() {
-        $(".button-collapse").sideNav();
+        $(".button-collapse").sideNav({
+            closeOnClick: true
+        });
         $('.parallax').parallax();
         $(".dropdown-button").dropdown();
+        $('.modal-trigger').leanModal();
     });
     </script>
 </template>
