--- a/client/home/nav.html
+++ b/client/home/nav.html
@@ -1,2 +1,5 @@
 <template name="ytm_home_nav">
+    {{#if currentUser}}
+    <li><a><i id="logout" class="mdi-action-exit-to-app"></i></a></li>
+    {{/if}}
 </template>
